--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: FersDiary
 first_name: Fernanda
-middle_name: 
+middle_name: .
 last_name: Prazeres
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
@@ -18,7 +18,7 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your o
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 📊 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://ferprazeres.github.io # the base hostname & protocol for your site
+url: https://FerPrazeres.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated:  # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
